--- a/index.ipynb
+++ b/index.ipynb
@@ -44,12 +44,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HELLO, THERE'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "yell_hello = \"hello, there\" # \"HELLO, THERE\"\n",
-    "yell_hello"
+    "yell_hello.upper()"
    ]
   },
   {
