--- a/index.ipynb
+++ b/index.ipynb
@@ -107,12 +107,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type_string = \"i'm a string\" # str\n",
-    "type_string = type(type_string)"
+    "type_string = type(type_string)\n",
+    "type_string"
    ]
   },
   {
