--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -134,7 +134,7 @@
    "outputs": [],
    "source": [
     "type_list = [\"i'm\", \"a\", \"list\"] # list\n",
-    "type(type_list)"
+    "type_list"
    ]
   },
   {
