--- a/index.ipynb
+++ b/index.ipynb
@@ -176,7 +176,7 @@
    "outputs": [],
    "source": [
     "longest_word_in_list = [\"i'm\", \"a\", \"list\"] # \"list\"\n",
-    "longest_word_in_list"
+    "max[]"
    ]
   },
   {
