--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -188,7 +188,7 @@
    ],
    "source": [
     "longest_word_in_list = [\"i'm\", \"a\", \"list\"] # \"list\"\n",
-    "max()"
+    "max[(longest_word_in_list[0], longest_word_in_list[1], longest_word_in_list[2])]"
    ]
   },
   {
