Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -171,23 +171,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'list'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "longest_word_in_list = [\"i'm\", \"a\", \"list\"] # \"list\"\n",
-    "sorted"
+    "sortedlongest_word = sorted(longest_word_in_list, key=len)\n"
    ]
   },
   {
