Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -176,7 +176,8 @@
    "outputs": [],
    "source": [
     "longest_word_in_list = [\"i'm\", \"a\", \"list\"] # \"list\"\n",
-    "sortedlongest_word = sorted(longest_word_in_list, key=len)\n"
+    "sortedlongest_word = sorted(longest_word_in_list, key=len)\n",
+    "longest_word_in_list = sorted_longestword"
    ]
   },
   {
