--- a/index.ipynb
+++ b/index.ipynb
@@ -171,13 +171,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'list'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "longest_word_in_list = [\"i'm\", \"a\", \"list\"] # \"list\"\n",
-    "sortedlongest_word = sorted(longest_word_in_list, key=len)\n",
-    "longest_word_in_list = sorted_longestword"
+    "sorted_longest_word = sorted(longest_word_in_list, key=len)\n",
+    "longest_word_in_list = sorted_longest_word[-1]\n",
+    "longest_word_in_list"
    ]
   },
   {
@@ -187,7 +199,7 @@
    "outputs": [],
    "source": [
     "smallest_number = [1, 3, 4, 78] # 1\n",
-    "smallest_number"
+    "min(smallest_number)"
    ]
   },
   {
