Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -263,7 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# boolean_compare = True [COMPARISON] True # False\n",
+    "boolean_compare = True [CO True # False\n",
     "# boolean_compare2 = False [COMPARISON] True # False"
    ]
   },
