--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -268,16 +268,15 @@
        "False"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "boolean_compare = True != True # False\n",
-    "boolean_compare2 = False == True # False\n",
-    "boolean_compare\n",
-    "boolean_compare2"
+    "boolean_compare2 = False [COMPARISON] True # False\n",
+    "boolean_compare"
    ]
   },
   {
