--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,7 @@
     "number_compare = 10 == 10 # True\n",
     "number_compare2 = -20 < 30 # True\n",
     "number_compare3 = 4 < 5 # False\n",
-    "number_com"
+    "number_compare"
    ]
   },
   {
