--- a/index.ipynb
+++ b/index.ipynb
@@ -282,14 +282,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "number_compare = 10 == 10 # True\n",
     "number_compare2 = -20 < 30 # True\n",
-    "number_compare3 = 4 < 5 # False\n",
-    "number_compare"
+    "number_compare3 = 4 > 5 # False\n",
+    "number_compare3"
    ]
   },
   {
@@ -298,9 +309,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# string_compare = \"stacy\" [COMPARISON] \"STACY\" # True\n",
-    "# string_compare2 = \"hey i love python!\" [COMPARISON] \"hi love python\" # False\n",
-    "# string_compare3 = \"this string is bigger than the other\" [COMPARISON] \"that is true\" # True"
+    "string_compare = \"stacy\" != \"STACY\" # True\n",
+    "string_compare2 = \"hey i love python!\" [COMPARISON] \"hi love python\" # False\n",
+    "string_compare3 = \"this string is bigger than the other\" [COMPARISON] \"that is true\" # True"
    ]
   },
   {
