--- a/index.ipynb
+++ b/index.ipynb
@@ -305,13 +305,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "string_compare = \"stacy\" != \"STACY\" # True\n",
-    "string_compare2 = \"hey i love python!\" [COMPARISON] \"hi love python\" # False\n",
-    "string_compare3 = \"this string is bigger than the other\" [COMPARISON] \"that is true\" # True"
+    "string_compare2 = \"hey i love python!\" == \"hi love python\" # False\n",
+    "string_compare3 = \"this string is bigger than the other\" > \"that is true\" # True\n",
+    "string_compare3"
    ]
   },
   {
