--- a/index.ipynb
+++ b/index.ipynb
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -343,10 +343,10 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,8 +356,8 @@
     "list_compare2 = [1,0,0] > [0,0,0] # True\n",
     "list_compare3 = [0,0,0] > [0,0,3] # False\n",
     "list_compare4 = [0,0,3,0] > [0,0,3] # True\n",
-    "list_compare5 = [0,0,4,0] > [0,0,3] # False\n",
-    "list_compare2"
+    "list_compare5 = [0,0,4,0] < [0,0,3] # False\n",
+    "list_compare5"
    ]
   },
   {
