--- a/index.ipynb
+++ b/index.ipynb
@@ -392,17 +392,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-31-4e1044a58d86>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-4e1044a58d86>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    logical_compare3 = 0 [COMPARISON] [] # 0\u001b[0m\n\u001b[0m                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "logical_compare = 2 and [] # []\n",
-    "logical_compare2 = [COMPARISON] [] # True\n",
+    "logical_compare2 = [] # True\n",
     "logical_compare3 = 0 [COMPARISON] [] # 0\n",
     "logical_compare4 = True [COMPARISON] 2 # 2\n",
     "logical_compare5 = 2 [COMPARISON] 3 # 2\n",
     "logical_compare6 = [COMPARISON] True # False\n",
-    "logical_compare7 = False [COMPARISON] 2 # False"
+    "logical_compare7 = False [COMPARISON] 2 # False\n",
+    "logical_compare"
    ]
   },
   {
