--- a/index.ipynb
+++ b/index.ipynb
@@ -392,27 +392,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-32-dd7bc3b7585b>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-dd7bc3b7585b>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    logical_compare4 = True [COMPARISON] 2 # 2\u001b[0m\n\u001b[0m                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "logical_compare = 2 and [] # []\n",
     "logical_compare2 = not [] # True\n",
-    "logical_compare3 = 0 or [] # 0\n",
+    "logical_compare3 = 0 and [] # 0\n",
     "logical_compare4 = True and 2 # 2\n",
     "logical_compare5 = 2 or 3 # 2\n",
     "logical_compare6 = not True # False\n",
-    "logical_compare7 = False [COMPARISON] 2 # False\n",
-    "logical_compare"
+    "logical_compare7 = False and 2 # False\n",
+    "logical_compare\n",
+    "logical_compare2\n",
+    "logical_compare3\n",
+    "logical_compare4\n",
+    "logical_compare5"
    ]
   },
   {
