Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -392,16 +392,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "False"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,9 @@
     "logical_compare2\n",
     "logical_compare3\n",
     "logical_compare4\n",
-    "logical_compare5"
+    "logical_compare5\n",
+    "logical_compare6\n",
+    "logical_compare7"
    ]
   },
   {
@@ -434,9 +436,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# a = []\n",
-    "# b = a\n",
-    "# identity_compare = {} [COMPARISON] {} # False\n",
+    "a = []\n",
+    "b = a\n",
+    "identity_compare = {}  {} # False\n",
     "# identity_compare2 = a [COMPARISON] b # True\n",
     "# identity_compare3 = b [COMPARISON] [] # True\n",
     "# identity_compare4 = 9 [COMPARISON] 10 # True\n",
