--- a/index.ipynb
+++ b/index.ipynb
@@ -432,18 +432,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = []\n",
     "b = a\n",
-    "identity_compare = {}  {} # False\n",
-    "# identity_compare2 = a [COMPARISON] b # True\n",
-    "# identity_compare3 = b [COMPARISON] [] # True\n",
+    "identity_compare = {} is {} # False\n",
+    "identity_compare2 = a is b # True\n",
+    "identity_compare3 = b is not [] # True\n",
     "# identity_compare4 = 9 [COMPARISON] 10 # True\n",
     "# identity_compare5 = \"Same\" [COMPARISON] \"Same\" # False\n",
-    "# identity_compare6 = [1,3,4] [COMPARISON] [1,2,3] # False"
+    "# identity_compare6 = [1,3,4] [COMPARISON] [1,2,3] # False\n",
+    "\n",
+    "identity_compare3"
    ]
   },
   {
