--- a/index.ipynb
+++ b/index.ipynb
@@ -432,16 +432,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,11 +452,11 @@
     "identity_compare = {} is {} # False\n",
     "identity_compare2 = a is b # True\n",
     "identity_compare3 = b is not [] # True\n",
-    "# identity_compare4 = 9 [COMPARISON] 10 # True\n",
-    "# identity_compare5 = \"Same\" [COMPARISON] \"Same\" # False\n",
-    "# identity_compare6 = [1,3,4] [COMPARISON] [1,2,3] # False\n",
+    "identity_compare4 = 9 is not 10 # True\n",
+    "identity_compare5 = \"Same\" is not \"Same\" # False\n",
+    "identity_compare6 = [1,3,4] is [1,2,3] # False\n",
     "\n",
-    "identity_compare3"
+    "identity_compare5"
    ]
   },
   {
